<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/takeorder"
            android:icon="@drawable/ic_emoticon"
            android:title="@string/nav_item_attachment" />
        <item
            android:id="@+id/delivery"
            android:icon="@drawable/ic_emoticon"
            android:title="@string/nav_item_images" />
        <item
            android:id="@+id/guest"
            android:icon="@drawable/ic_emoticon"
            android:title="@string/nav_item_location" />
    </group>
    <item android:title="@string/nav_sub_menu"> 
        <menu>
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/nav_sub_menu_item01"
                android:id="@+id/makecomplaint"/>
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/nav_sub_menu_item02"
                android:id="@+id/details"/>
        </menu>
    </item>
</menu>